[package]
name = "moins"
version = "0.1.0"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2018"
description = "A Keep It Simple Stupid pager crate"
repository = "https://github.com/oknozor/moins"
documentation = "https://docs.rs/moins"
license = "MIT"
readme = "crates-io.md"

[dependencies]
termion = "1.5.3"
